# QT_SmartHomeControlCenter

./: CMakeLists.txt  README.md
